src/test/ui/polymorphization/unsized_cast.stderr
error: item has unused generic parameters
  --> $DIR/unsized_cast.rs:10:18
   |
LL | fn foo<T: Default>() {
   |        - generic parameter `T` is unused
LL |     let _: T = Default::default();
LL |     (|| Box::new(|| {}) as Box<dyn Fn()>)();
   |                  ^^^^^

error: item has unused generic parameters
  --> $DIR/unsized_cast.rs:10:5
   |
LL | fn foo<T: Default>() {
   |        - generic parameter `T` is unused
LL |     let _: T = Default::default();
LL |     (|| Box::new(|| {}) as Box<dyn Fn()>)();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: item has unused generic parameters
  --> $DIR/unsized_cast.rs:20:15
   |
LL | fn foo2<T: Default>() {
   |         - generic parameter `T` is unused
...
LL |         call(&|| {}, ());
   |               ^^^^^

error: aborting due to 3 previous errors

